finish unit test 1 for isGameOver

--- a/projects/hagenr/dominion/Makefile
+++ b/projects/hagenr/dominion/Makefile
@@ -18,6 +18,21 @@ badTestDrawCard: badTestDrawCard.c dominion.o rngs.o
 testBuyCard: testDrawCard.c dominion.o rngs.o
 	gcc -o testDrawCard -g  testDrawCard.c dominion.o rngs.o $(CFLAGS)
 
+unittest1: unittest1.c dominion.o rngs.o
+	gcc -o unittest1 -g  unittest1.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults.out: unittest1 playdom player
+	@echo "unit tests starting"
+
+	@echo "Dominion Unit Test Results" > unittestresults.out
+	@echo "--------------------------" >> unittestresults.out
+
+	@echo "unittest1.c" >> unittestresults.out
+	@./unittest1 >> unittestresults.out
+	@gcov dominion.c >> unittestresults.out
+
+	@echo "unit tests complete"
+
 testAll: dominion.o testSuite.c
 	gcc -o testSuite testSuite.c -g  dominion.o rngs.o $(CFLAGS)
 
@@ -32,7 +47,7 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard tags
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 tags
 
 .PHONY: tags clean
 
