add unit test 3 for updateCoins

--- a/projects/hagenr/dominion/Makefile
+++ b/projects/hagenr/dominion/Makefile
@@ -24,6 +24,9 @@ unittest1: unittest1.c dominion.o rngs.o
 unittest2: unittest2.c dominion.o rngs.o
 	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
 
+unittest3: unittest3.c dominion.o rngs.o
+	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+
 unittestresults.out: unittest1 unittest2 dominion.o rngs.o
 	@echo "unit tests starting"
 
@@ -54,7 +57,7 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 tags
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 tags
 
 .PHONY: tags clean
 
