add unit test for scoreFor

--- a/projects/hagenr/dominion/Makefile
+++ b/projects/hagenr/dominion/Makefile
@@ -27,7 +27,10 @@ unittest2: unittest2.c dominion.o rngs.o
 unittest3: unittest3.c dominion.o rngs.o
 	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
 
-unittestresults.out: unittest1 unittest2 dominion.o rngs.o
+unittest4: unittest4.c dominion.o rngs.o
+	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults.out: unittest1 unittest2 unittest3 unittest4 dominion.o rngs.o
 	@echo "unit tests starting"
 
 	@echo "Dominion Unit Test Results" > unittestresults.out
@@ -43,6 +46,10 @@ unittestresults.out: unittest1 unittest2 dominion.o rngs.o
 
 	@echo "unittest3.c" >> unittestresults.out
 	@./unittest3 >> unittestresults.out
+	@gcov dominion.c >> unittestresults.out
+
+	@echo "unittest4.c" >> unittestresults.out
+	@./unittest4 >> unittestresults.out
 	@gcov dominion.c >> unittestresults.out
 
 	@echo "unit tests complete"
@@ -61,7 +68,7 @@ runtests: testDrawCard
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 tags
+all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 unittest3 unittest4 tags
 
 .PHONY: tags clean
 
