--- a/projects/hagenr/dominion/Makefile
+++ b/projects/hagenr/dominion/Makefile
@@ -33,7 +33,17 @@ unittest4: unittest4.c dominion.o rngs.o
 cardtest1: cardtest1.c dominion.o rngs.o
 	gcc -o cardtest1 -g cardtest1.c dominion.o rngs.o $(CFLAGS)
 
-unittestresults.out: unittest1 unittest2 unittest3 unittest4 cardtest1 dominion.o rngs.o
+cardtest2: cardtest2.c dominion.o rngs.o
+	gcc -o cardtest2 -g cardtest2.c dominion.o rngs.o $(CFLAGS)
+
+cardtest3: cardtest3.c dominion.o rngs.o
+	gcc -o cardtest3 -g cardtest3.c dominion.o rngs.o $(CFLAGS)
+
+cardtest4: cardtest4.c dominion.o rngs.o
+	gcc -o cardtest4 -g cardtest4.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults.out: unittest1 unittest2 unittest3 unittest4 cardtest1 \
+	cardtest2 cardtest3 cardtest4 dominion.o rngs.o
 	@echo "unit tests starting"
 
 	@echo "Dominion Unit Test Results" > unittestresults.out
@@ -59,6 +69,18 @@ unittestresults.out: unittest1 unittest2 unittest3 unittest4 cardtest1 dominion.
 	@./cardtest1 >> unittestresults.out
 	@gcov dominion.c >> unittestresults.out
 
+	@echo "cardtest2.c" >> unittestresults.out
+	@./cardtest2 >> unittestresults.out
+	@gcov dominion.c >> unittestresults.out
+
+	@echo "cardtest3.c" >> unittestresults.out
+	@./cardtest3 >> unittestresults.out
+	@gcov dominion.c >> unittestresults.out
+
+	@echo "cardtest4.c" >> unittestresults.out
+	@./cardtest4 >> unittestresults.out
+	@gcov dominion.c >> unittestresults.out
+
 	@echo "unit tests complete"
 
 testAll: dominion.o testSuite.c
@@ -76,7 +98,7 @@ player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
 all: playdom player testDrawCard testBuyCard badTestDrawCard unittest1 unittest2 \
-	unittest3 unittest4 cardtest1 tags
+	unittest3 unittest4 cardtest1 cardtest2 cardtest3 cardtest4 tags
 
 .PHONY: tags clean
 
@@ -84,5 +106,7 @@ tags:
 	ctags --c-kinds=+egms `find . -name "*.[ch]" -print`
 
 clean:
-	rm -f *.o playdom player *.gcov *.gcda *.gcno *.so *.out testDrawCard badTestDrawCard unittest1 unittest2 \
-		unittest3 unittest4 cardtest1 tags
+	rm -f *.o playdom player *.gcov *.gcda *.gcno *.so *.out testDrawCard \
+		badTestDrawCard unittest1 unittest2 unittest3 unittest4 \
+		cardtest1 cardtest2 cardtest3 cardtest4 tags
+
