finish initial version testme.c

--- a/projects/hagenr/quiz/makefile
+++ b/projects/hagenr/quiz/makefile
@@ -1,4 +1,5 @@
-CFLAGS = -Wall -fpic -coverage -lm
+# CFLAGS = -Wall -fpic -coverage -lm
+CFLAGS = -Wall -lm
 
 testme: testme.c
 	gcc $(CFLAGS) -o testme testme.c
