final cleanup of testme.c and makefile

--- a/projects/hagenr/quiz/makefile
+++ b/projects/hagenr/quiz/makefile
@@ -1,5 +1,10 @@
-CFLAGS = -Wall -lm
+CFLAGS = -Wall -pedantic -Wextra -lm
+
+all: testme
+	./testme
 
 testme: testme.c
 	gcc $(CFLAGS) -o testme testme.c
-	./testme
+
+clean:
+	rm -rf testme
